--- a/src/IdentityServer4.Postgresql/project.json
+++ b/src/IdentityServer4.Postgresql/project.json
@@ -2,7 +2,10 @@
   "version": "1.0.0-*",
 
   "dependencies": {
-    "NETStandard.Library": "1.6.0"
+    "NETStandard.Library": "1.6.0",
+    "IdentityServer4": "1.0.0-rc3",
+    "Marten": "1.1.3",
+    "AutoMapper": "5.1.1"
   },
 
   "frameworks": {
