WIP : IdentityServer4 resource change

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,16 @@ mono: 4.4.2
 dotnet: 1.0.0-preview2-003121
 sudo: required
 dist: trusty
+env:
+- PGUSER=postgres
+- PGPASSWORD=skhokho
+before_script:
+  - sudo apt-get install postgresql-9.4-plv8 -y
+  - psql -c 'create database idsrv4_test;' -U postgres
+  - psql -d idsrv4_test -U postgres -c "create extension if not exists plv8;"
+  
 addons:
+  postgresql: "9.4"
   apt:
     packages:
     
@@ -13,3 +22,5 @@ script:
 notifications:
   email:
     - sfiso.dlaba@gmail.com
+services:
+  - postgresql
