--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,18 @@
 version: 1.0.{build}
+environment:
+  POSTGRES_PATH: C:\Program Files\PostgreSQL\9.4
+  PG_PLV8_EXTENSION_ZIP_FILENAME: pg94plv8jsbin_w64
+  PG_DB: idsrv4_test
+services:
+  - postgresql94
+install:
+  - SET PATH=%POSTGRES_PATH%\bin;%PATH%
+  - curl -L -O -S -s http://www.postgresonline.com/downloads/%PG_PLV8_EXTENSION_ZIP_FILENAME%.zip
+  - 7z x %PG_PLV8_EXTENSION_ZIP_FILENAME%.zip
+  - xcopy /s /y /d %PG_PLV8_EXTENSION_ZIP_FILENAME% "%POSTGRES_PATH%\"	
 build_script:
+- psql -U postgres -c "create database idsrv4_test;"
+- psql -U postgres -d %PG_DB% -c "create extension if not exists plv8;"
 - ps: ./build.ps1
 test: off
 artifacts:
