--- a/src/IdentityServer4.Postgresql/project.json
+++ b/src/IdentityServer4.Postgresql/project.json
@@ -1,16 +1,15 @@
 ﻿{
-  "version": "1.0.0-*",
+  "version": "2.0.0-rc1-*",
 
   "dependencies": {
     "NETStandard.Library": "1.6.0",
-    "IdentityServer4": "1.0.0-rc3",
+    "IdentityServer4": "1.0.0-rc4-update1",
     "Marten": "1.1.3",
     "AutoMapper": "5.1.1"
   },
 
   "frameworks": {
-    "netstandard1.6": {
-      "imports": "dnxcore50"
-    }
+    "netstandard1.4": { },
+    "net46": {}
   }
 }
