--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,15 +2,15 @@ version: 1.0.{build}
 environment:
   POSTGRES_PATH: C:\Program Files\PostgreSQL\9.4
   PG_PLV8_EXTENSION_ZIP_FILENAME: pg94plv8jsbin_w64
-  PG_DB: idsrv4_test
 services:
   - postgresql94
 install:
-  - SET PATH=%POSTGRES_PATH%\bin;%PATH%
+  - SET PATH=C:\Program Files\PostgreSQL\9.4\bin\;%PATH%
   - curl -L -O -S -s http://www.postgresonline.com/downloads/%PG_PLV8_EXTENSION_ZIP_FILENAME%.zip
   - 7z x %PG_PLV8_EXTENSION_ZIP_FILENAME%.zip
   - xcopy /s /y /d %PG_PLV8_EXTENSION_ZIP_FILENAME% "%POSTGRES_PATH%\"	
 build_script:
+#- createdb idsrv4_test
 #- psql -U postgres -c "create database idsrv4_test;"
 #- psql -U postgres -d %PG_DB% -c "create extension if not exists plv8;"
 - ps: ./build.ps1
@@ -21,5 +21,5 @@ deploy:
 - provider: NuGet
   server: https://www.myget.org/F/identity-postgresql/api/v2/package/
   api_key:
-    secure: 6FUgwWE+SbScs3FSO59HSkQMlApDmYKeIHdVgwgvvDggtzYa+We875daTsQzDEaT3SgmnPlblq/vLKRgaFuAZ5FpKqUc6Mbbq5rbQfNZ7mM=
+    secure: JE+GsFvzX2jnVTDi2EYZhc4wXF6Lz5FvVPBK9ZlXx1ALM4S0dOPpV4ESOj8/lKWL
   skip_symbols: true
