--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ dotnet: 1.0.0-preview2-003121
 sudo: required
 dist: trusty
 env:
-- PGUSER=postgres
-- PGPASSWORD=skhokho
+#- PGUSER=postgres
+#- POSTGRES_PASSWORD=skhokho
 before_script:
   - sudo apt-get install postgresql-9.4-plv8 -y
   - psql -c 'create database idsrv4_test;' -U postgres
