--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,10 @@ jobs:
      docker:
        - image: microsoft/dotnet:latest
        - image: postgres:9.6.2-alpine
-        environment:
-        - POSTGRES_USER=sa
-        - POSTGRES_DB=idsrv4_test
-        - POSTGRES_PASSWORD=skhokho
+          environment:
+            - POSTGRES_USER=sa
+            - POSTGRES_DB=idsrv4_test
+            - POSTGRES_PASSWORD=skhokho
      steps:
        - checkout
        - run:
@@ -18,6 +18,11 @@ jobs:
        - run:
           name: Wait for db
           command: dockerize -wait tcp://localhost:5432 -timeout 1m
-       - run: dotnet restore
+       - run:
+          name: restore
+          command: dotnet restore
+       - run:
+          name: build
+          command: dotnet build
        - run: dotnet test test/IdentityServer4.Postgresql.UnitTests
        - run: dotnet test test/IdentityServer4.Postgresql.IntegrationTests
